--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     </head>
 
     <body>
-        <div class="background">
-        <section class="section1">
+        <div class="section1">
             <nav>
                 <ul>
                     <li>
@@ -25,9 +24,10 @@
             <h2 class="Intro">
                 Hello, I'm Justin, welcome to my profile page!
             </h2>
-        </section>
+        </div>
 
-        <img src="Images/leaves1.png" alt="Error" class="l1">
+        <div class="section2">
+            <img src="Images/leaves1.png" alt="Error" class="l1">
         <img src="Images/leaves2.png" alt="Error" class="l2">
         <img src="Images/leaves3.png" alt="Error" class="l3">
         <img src="Images/leaves4.png" alt="Error" class="l4">
@@ -59,7 +59,6 @@
             <img src="Images/loading.gif" alt="Error">
             <p class="popup">Coming soon (Hopefully...)</p>
         </div>
-
         </div>
 
         <footer>
