--- a/index.html
+++ b/index.html
@@ -27,38 +27,45 @@
         </div>
 
         <div class="section2">
-            <img src="Images/leaves1.png" alt="Error" class="l1">
-        <img src="Images/leaves2.png" alt="Error" class="l2">
-        <img src="Images/leaves3.png" alt="Error" class="l3">
-        <img src="Images/leaves4.png" alt="Error" class="l4">
+            <div class="leaves">
+                <div><img src="Images/leaves1.png" alt="Error"></div>
+                <div><img src="Images/leaves2.png" alt="Error"></div>
+                <div><img src="Images/leaves3.png" alt="Error"></div>
+                <div><img src="Images/leaves4.png" alt="Error"></div>
+                <div><img src="Images/leaves1.png" alt="Error"></div>
+                <div><img src="Images/leaves2.png" alt="Error"></div>
+                <div><img src="Images/leaves3.png" alt="Error"></div>
+                <div><img src="Images/leaves4.png" alt="Error"></div>
+                <div><img src="Images/leaves3.png" alt="Error"></div>
+            </div>
 
-        <div class="container">
-            <h1 id="about">About Me</h1>
-            <ul>
-                <li>Name: Justin Lew</li>
-                <li>Age: Born 2003</li>
-                <li>Nationality: Aussie</li>
-                <li>Ethnicity: Chinese</li>
-                <li>Studying UNSW CompSci</li>
-            </ul>
-        </div>
+            <div class="container">
+                <h1 id="about">About Me</h1>
+                <ul>
+                    <li>Name: Justin Lew</li>
+                    <li>Age: Born 2003</li>
+                    <li>Nationality: Aussie</li>
+                    <li>Ethnicity: Chinese</li>
+                    <li>Studying UNSW CompSci</li>
+                </ul>
+            </div>
 
-        <div class="container">
-            <h1 id="interests">Interests</h1>
-            <ul>
-                <li>Gaming 24/7</li>
-                <li>Coding (Learning Unity, Python + now HTML/CSS seems fun!)</li>
-                <li>Gyming</li>
-                <li>Can play piano, wanna try the guitar (like the melancholic vibe)</li>
-                <li>Losing soccer games on Saturday</li>
-            </ul>
-        </div>
+            <div class="container">
+                <h1 id="interests">Interests</h1>
+                <ul>
+                    <li>Gaming 24/7</li>
+                    <li>Coding (Learning Unity, Python + now HTML/CSS seems fun!)</li>
+                    <li>Gyming</li>
+                    <li>Can play piano, wanna try the guitar (like the melancholic vibe)</li>
+                    <li>Losing soccer games on Saturday</li>
+                </ul>
+            </div>
 
-        <div class="container">
-            <h1 id="interests">Projects</h1>
-            <img src="Images/loading.gif" alt="Error">
-            <p class="popup">Coming soon (Hopefully...)</p>
-        </div>
+            <div class="container">
+                <h1 id="interests">Projects</h1>
+                <img src="Images/loading.gif" alt="Error">
+                <p class="popup">Coming soon (Hopefully...)</p>
+            </div>
         </div>
 
         <footer>
